[gd_scene load_steps=7 format=3 uid="uid://2o12hsa6g168"]

[ext_resource type="Script" path="res://Scenes/Management/NewCampaignFlow.gd" id="1_script"]
[ext_resource type="Script" path="res://Scenes/Utils/TutorialManager.gd" id="2_w7qbq"]
[ext_resource type="Script" path="res://Scenes/Scene Container/CrewSizeSelection.gd" id="3_3xjq0"]
[ext_resource type="Script" path="res://Scenes/Scene Container/campaigncreation/scripts/CharacterCreationScene.gd" id="4_lrtqq"]
[ext_resource type="Script" path="res://Scenes/Management/CrewManagement.gd" id="5_l4k6d"]
[ext_resource type="Script" path="res://Scenes/Scene Container/campaigncreation/scripts/CampaignSetupScreen.gd" id="6_2yj0n"]

[node name="NewCampaignFlow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="TutorialManager" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("2_w7qbq")

[node name="CrewSizeSelection" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("3_3xjq0")

[node name="CharacterCreator" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("4_lrtqq")

[node name="CrewManagement" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("5_l4k6d")

[node name="CampaignSetupScreen" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("6_2yj0n")
